Refactor .gitignore, remove rate limiting from completed_map route, and adjust script tag formatting in completed_map.html

--- a/templates/completed_map.html
+++ b/templates/completed_map.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Completed Routes Map</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap" async defer></script>
+    <script async defer 
+    src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap"></script>    
     <style>
         #map { height: 500px; width: 100%; }
     </style>
