Enhance file upload handling and improve error reporting; ensure unique image filenames and update image URL generation

--- a/templates/completed_map.html
+++ b/templates/completed_map.html
@@ -70,7 +70,8 @@
 
                                 let infowindow = new google.maps.InfoWindow({
                                     content: `<b>${bin.note}</b><br>
-                                              ${bin.image ? `<img src="https://hrm-route-app.onrender.com${bin.image}" width="100"><br>` : ""}`
+                                              ${bin.image ? `<img src="${bin.image}" width="100"><br>` : ""}`
+
                                 });
 
                                 marker.addListener('click', function() {
